[project]
name = "transcribe"
version = "0.1.0"
description = "Transcribe speech to IPA with Whisper"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "numpy>=2.3.5",
    "python-multipart>=0.0.22",
    "scipy>=1.17.0",
    "soundfile>=0.13.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "iprogress>=0.4",
]
